Fix map label overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -495,6 +495,11 @@ span.game-mode-button {
     display: inline-block;
     margin-top: 2px;
     padding-bottom: 3px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 244px;
+}
 
 .total-maps {
     padding: 18px;
